fix(client): low/info robustness & tech-debt sweep (M5, L7-L10, L12, L14, L19-L22)
- M5: throw the typed ClientProtocolException at the six client rejection sites so
  the edge maps them to an RFC 9457 4xx document instead of a generic 500
- L9: private_key_jwt now supports the PS256/384/512 and ES256/384/512 families
- L10: robust WWW-Authenticate parsing — quoted commas, escaped quotes, and
  duplicate auth-params rejected fail-closed
- L12: @NullMarked on the client root and lifecycle packages
- L14: ClientConfiguration validates non-blank issuer/clientId, issuer URL shape,
  and non-blank scopes at construction (mirrors PostLogoutRedirectValidator)
- L19: corrected the CLIENT-N traceability IDs (CLIENT-5/6/16/17)
- L20: removed stale doc-rot (package-info status, plan-internal increment
  references, maven.javadoc.skip now the public surface exists)
- L21: aligned version.archunit with the managed 1.4.2 bump
- L22: documented the immutable-String token-material trade-off in token-handling
- tests: assert PS/ES acceptance and the of(Map) duplicate-defense contract; update
  RefreshConcurrencyTest to expect ClientProtocolException on reuse

Co-Authored-By: Claude <noreply@anthropic.com>